css/home.css
#about-me
{
     margin-top: 2.5rem;
     font-size: 1.75em;
     text-align: justify;
     padding-left: 15vw;
     padding-right: 18vw;
}

@media (max-width:800px)
{
     #about-me
     {
          text-align: left;
     }
}

@media (max-width:600px)
{
     #about-me
     {
          margin-top: 6.5rem;
     }
}

@media (max-width:400px)
{
     #about-me
     {
          margin-top: 2.5rem;
     }
}

#about-me a
{
     color: #5D68BB;
}

#about-me a:hover
{
     color: #1b2679;
}

#about-me p
{
     margin-bottom: 3vh;
}

#profile-pic img
{
     position: absolute;
     left: 2vw;
     top: 2vw;
     border-radius: 10em;
     border: 0.85vw solid #1b2679;
     width: 10vw;
}

@media (max-width: 800px)
{
     #profile-pic
     {
          display: none;
     }
}

h2
{
     color: #696969;
}

